--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"web:lint": "next lint",
 		"contracts:compile": "hardhat compile",
 		"contracts:deploy": "hardhat run scripts/deploy.js --network caldera",
+		"contracts:write": "hardhat run scripts/write.js --network caldera",
 		"contracts:read": "hardhat run scripts/read.js --network caldera",
 		"contracts:nft": "hardhat run scripts/nft.js --network caldera"
 	},
